23-02-2022 resthoursclient Full script

--- a/TM.RestHour.ExportImport/TM.RestHour.ExportImport/App.config
+++ b/TM.RestHour.ExportImport/TM.RestHour.ExportImport/App.config
@@ -38,6 +38,18 @@
     <add key="WorkSessionsxml" value="WorkSessions.xml" />
     <add key="CrewRegimeTRxml" value="CrewRegimeTR.xml" />
     <add key="CompanyDetailsxml" value="CompanyDetails.xml" />
+
+	  <add key="CIRMAccidentDetailsxml" value="CIRMAccidentDetails.xml" />
+	  <add key="CIRMAffectedFindingsxml" value="CIRMAffectedFindings.xml" />
+	  <add key="CIRMMedicalSymtomologyxml" value="CIRMMedicalSymtomology.xml" />
+	  <add key="CIRMMedicalTreatmentGivenOnboardxml" value="CIRMMedicalTreatmentGivenOnboard.xml" />
+	  <add key="CIRMMedicationTakenxml" value="CIRMMedicationTaken.xml" />
+	  <add key="CIRMTeleMedicalConsultationxml" value="CIRMTeleMedicalConsultation.xml" />
+	  <add key="CIRMUploadedImagesxml" value="CIRMUploadedImages.xml" />
+	  <add key="CIRMVitalStatisticsxml" value="CIRMVitalStatistics.xml" />
+	  <add key="CIRMVoyageDetailsxml" value="CIRMVoyageDetails.xml" />
+	  <add key="CIRMWeatherDetailsxml" value="CIRMWeatherDetails.xml" />
+	  	  
     <add key="OutputSize" value="10240000" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="SchedulerTimer" value="180" />
