--- a/TM.RestHour.ExportImport/TM.RestHour.ExportImport/App.config
+++ b/TM.RestHour.ExportImport/TM.RestHour.ExportImport/App.config
@@ -12,7 +12,7 @@
     </rules>
   </nlog>
   <connectionStrings>
-    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient;User Id=sa;Password=12345;Trusted_Connection=False;" />
+    <add name="RestHourDBConnectionString" connectionString="Server=DESKTOP-R1V2FTS\SQLEXPRESS;Database=resthoursclient_uskDataAndCurrentSchema;User Id=sa;Password=12345;Trusted_Connection=False;" />
   </connectionStrings>
   <appSettings>
      <!--***********************New Added For Data Export**************************-->
@@ -49,6 +49,11 @@
 	  <add key="CIRMVitalStatisticsxml" value="CIRMVitalStatistics.xml" />
 	  <add key="CIRMVoyageDetailsxml" value="CIRMVoyageDetails.xml" />
 	  <add key="CIRMWeatherDetailsxml" value="CIRMWeatherDetails.xml" />
+	  
+	  <add key="CIRMxml" value="CIRM.xml" />
+	  <add key="ExaminationForMedicalAdvisexml" value="ExaminationForMedicalAdvise.xml" />
+	  <add key="JoiningMedicalFileDataxml" value="JoiningMedicalFileData.xml" />
+	  <add key="MedicalAdvisexml" value="MedicalAdvise.xml" />
 	  	  
     <add key="OutputSize" value="10240000" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
